force-app/main/default/objects/BL_EmailTemplateField__mdt/BL_EmailTemplateField__mdt.object-meta.xml
<CustomObject>
    <label>BL EmailTemplateField</label>
    <pluralLabel>BL EmailTemplateFields</pluralLabel>
</CustomObject>