force-app/main/default/objects/BL_EmailTemplateField__mdt/fields/BL_Active__c.field-meta.xml
<CustomField>
    <fullName>BL_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>