force-app/main/default/objects/BL_EmailTemplateField__mdt/fields/BL_FieldWrapperName__c.field-meta.xml
<CustomField>
    <fullName>BL_FieldWrapperName__c</fullName>
    <label>Field Wrapper Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>