force-app/main/default/objects/BL_EmailTemplateField__mdt/fields/BL_Object__c.field-meta.xml
<CustomField>
    <fullName>BL_Object__c</fullName>
    <label>Object</label>
    <length>20</length>
    <type>Text</type>
</CustomField>