force-app/main/default/objects/BL_EmailTemplateField__mdt/fields/BL_StringToReplace__c.field-meta.xml
<CustomField>
    <fullName>BL_StringToReplace__c</fullName>
    <label>String To Replace</label>
    <length>50</length>
    <type>Text</type>
</CustomField>